feat: added circle compliance engine support

--- a/.env.sample
+++ b/.env.sample
@@ -3,6 +3,8 @@ NEXT_PUBLIC_APP_ID="[APP_ID goes here]"
 # hosted backend url
 NEXT_PUBLIC_BASE_URL="http://localhost:8080"
 
+NEXT_PUBLIC_API_KEY=TEST_API_KEY:[API_KEY goes here]
+
 # canonical hosted url
 NEXTAUTH_URL="http://localhost:3000"
 
