--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "axios": "^1.6.7",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0",
     "react-hook-form": "^7.50.0",
     "react-qr-code": "^2.0.12",
     "react-query": "^3.39.3",
+    "uuid": "^11.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
