--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@mui/joy": "^5.0.0-beta.32",
     "axios": "^1.6.7",
+    "ethers": "^6.13.4",
     "next": "14.1.0",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0",
