--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@emotion/styled": "^11.11.5",
     "@heroicons/react": "^2.1.3",
     "@hookform/resolvers": "^3.3.4",
+    "@mui/icons-material": "^6.1.6",
     "@mui/joy": "^5.0.0-beta.32",
     "axios": "^1.6.7",
     "ethers": "^6.13.4",
-    "next": "14.1.0",
+    "next": "^15.0.2",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0",
     "react-hook-form": "^7.50.0",
@@ -32,14 +33,14 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "postcss": "^8",
+    "postcss": "^8.4.47",
     "prettier": "^3.2.5",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.4.14",
     "typescript": "^5"
   },
   "peerDependencies": {
