--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^6.1.6",
     "@mui/joy": "^5.0.0-beta.32",
+    "@mui/material": "^6.1.6",
     "axios": "^1.6.7",
     "ethers": "^6.13.4",
     "next": "^15.0.2",
